EDIT comments & naming

--- a/Pastejacker/index.html
+++ b/Pastejacker/index.html
@@ -63,7 +63,8 @@
 
         function pasteJack(e) {
 
-            paste_box.value = '' // RESET the paste bin value
+            // RESET the paste box value
+            paste_box.value = ''
 
             // CREATE an input element that will be destroyed later
             // PASTE our text and SELECT it
